@@ -4,6 +4,7 @@
 
 * [JRuby] Document#parse should support IO objects that respond to #read. (#1124) (Thanks, Jake Byman!)
 * [MRI] Duplicate-id errors when setting the `id` attribute on HTML documents are now silenced. (#1262)
+* [JRuby] 角括弧([, ])がテキスト内に存在すると、SAXパーザがテキストを分割してしまう。(#1261)
 
 
 === 1.6.6.2 / 2015年01月23日
