@@ -4,6 +4,7 @@
 
 * [JRuby] Document#parse should support IO objects that respond to #read. (#1124) (Thanks, Jake Byman!)
 * [MRI] Duplicate-id errors when setting the `id` attribute on HTML documents are now silenced. (#1262)
+* [JRuby] SAX parser cuts texts in peices when quare brackets exist. (#1261)
 
 
 === 1.6.6.2 / 2015-01-23
